syntax = "proto3";

package mimir;

message SSL_DetectionBall {
  float  confidence = 1;
  uint32 area       = 2;
  float  x          = 3;
  float  y          = 4;
  float  z          = 5;
  float  pixel_x    = 6;
  float  pixel_y    = 7;
}

message SSL_DetectionRobot {
  float  confidence  =  1;
  uint32 robot_id    =  2;
  float  x           =  3;
  float  y           =  4;
  float  orientation =  5;
  float  pixel_x     =  6;
  float  pixel_y     =  7;
  float  height      =  8;
}

message SSL_DetectionFrame {
  uint32             frame_number  = 1;
  double             t_capture     = 2;
  double             t_sent        = 3;
  uint32             camera_id     = 4;
  repeated SSL_DetectionBall  balls         = 5;
  repeated SSL_DetectionRobot robots_yellow = 6;
  repeated SSL_DetectionRobot robots_blue   = 7;
}
