syntax = "proto3";
package mimir;

import "messages_robocup_ssl_detection.proto";
import "messages_robocup_ssl_geometry.proto";

message SSL_WrapperPacket {
  SSL_DetectionFrame detection = 1;
  SSL_GeometryData geometry = 2;
}
